--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,15 @@ body {
 }
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .container {
   background-color: #ffffff;
   width: 870px;
   padding: 30px;
+  margin-top: 20px;
+  border-radius: 5px;
 }
 .top-players {
   margin-bottom: 30px;
@@ -44,11 +47,17 @@ main {
 }
 hr {
   border: 1px solid #d1d1d1;
+  margin-bottom: 27px;
 }
 
 /* -------------
 top blog styles 
 ----------------*/
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 26px;
+}
 .blog {
   display: flex;
 }
@@ -70,4 +79,70 @@ top blog styles
   text-decoration: none;
   font-size: 16px;
   color: #562eff;
+}
+/* ------------------
+courses styles 
+--------------------*/
+.courses {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 24px;
+}
+.course {
+  filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+}
+.courses .course-banner img {
+  width: 224px;
+  height: 125px;
+}
+.course-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-duration {
+  background-color: #fee5df;
+  border-radius: 15px;
+  color: #ed6b4f;
+  padding: 5px;
+}
+.fa-star {
+  font-size: 12px;
+}
+.fa-star.filled {
+  color: #ffc014;
+}
+.fa-star.empty {
+  color: #aeaeae;
+}
+/* --------------
+Media Queries 
+-----------------*/
+/* Mobile Devices */
+@media only screen and (max-width: 688px) {
+  .container {
+    width: 100%;
+  }
+  .players,
+  .blogs,
+  .courses {
+    grid-template-columns: 1fr;
+  }
+  .player,
+  .blog {
+    flex-direction: column;
+  }
+}
+/* Tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+  .container {
+    width: 100%;
+  }
+  .players,
+  .courses {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .blogs {
+    grid-template-columns: 1fr;
+  }
 }
