--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,36 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: #f3f1ff;
+  margin: 0;
 }
+header {
+  background-color: #562eff;
+}
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+nav a {
+  text-decoration: none;
+  color: white;
+}
+.logo a {
+  padding-left: 15px;
+}
+.logo img {
+  width: 40.42px;
+  height: 51px;
+  padding-left: 285px;
+}
+.top-menu a {
+  padding-left: 36px;
+}
+.top-menu img {
+  padding-left: 36px;
+  padding-right: 289px;
+}
+
+/* ----------------------------- */
 main {
   display: flex;
   flex-direction: column;
@@ -26,7 +55,9 @@ main {
   font-size: 24px;
   margin-top: 3px;
 }
-/* top players style */
+/* --------------------
+top players style 
+-----------------------*/
 .players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
